--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@sanity/client": "^6.4.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
