--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@sanity/client": "^6.4.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lazy-load-image-component": "^1.6.0",
+    "react-multi-carousel": "^2.8.4",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.15.0"
   },
