--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^6.4.11",
     "@sanity/image-url": "^1.0.2",
+    "draft-js": "^0.11.7",
     "firebase": "^10.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-lazy-load-image-component": "^1.6.0",
     "react-multi-carousel": "^2.8.4",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.15.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "swiper": "^10.3.0"
   },
   "devDependencies": {
